--- a/src/assets/css/widget.scss
+++ b/src/assets/css/widget.scss
@@ -44,16 +44,36 @@ $primary-background-color: #ecf5ff;
 			}
 		}
 
+		.widget-action-delete {
+			position: absolute;
+			right: 10px;
+			bottom: -20px;
+			z-index: 1009;
+		}
+
+		.widget-action-clone {
+			position: absolute;
+			right: 70px;
+			bottom: -20px;
+			z-index: 1009;
+		}
+
 		.widget-view.widget-view-imgshow {
 			padding: 0;
-			background: #f1f1f1;
+      background: #f1f1f1;
+      border-bottom:none;
+    }
+    
+    .widget-view.widget-view-button {
+      border-bottom:none;
 		}
 
 		.widget-view {
 			margin: 0;
 			padding: 10px;
 			background: #fff;
-			position: relative;
+      position: relative;
+      border-bottom: 1px solid #eee;
 
 			&:after {
 				content: "";
@@ -77,31 +97,25 @@ $primary-background-color: #ecf5ff;
 			}
 
 			&.active {
-        background: $primary-background-color;
-        // box-shadow: 0px 1px 10px 1px #90c7ff;
+				background: $primary-background-color;
+				// box-shadow: 0px 1px 10px 1px #90c7ff;
 				z-index: 1111;
 			}
 
-			.widget-action-delete {
-				position: absolute;
-				right: 10px;
-				bottom: -20px;
-				z-index: 1009;
-			}
-
-			.widget-action-clone {
-				position: absolute;
-				right: 70px;
-				bottom: -20px;
-				z-index: 1009;
+			.wg-item {
+        display: flex;
+				line-height: 50px;
 			}
 
 			.wg-input, .wg-select {
-				padding: 10px 0;
+				width: 100%;
+				height: 40px;
+				margin: 5px 0;
 				color: #666;
 				font-size: 14px;
 				border-radius: 4px;
 				border: 1px solid #ddd;
+				outline: none;
 				text-indent: 10px;
 				background: #fff;
 				transition: .3s;
@@ -112,9 +126,9 @@ $primary-background-color: #ecf5ff;
 				color: #333;
 			}
 			.wg-checkbox {
-				line-height: 40px;
 
 				.label {
+          float: left;
 					cursor: pointer;
 					position: relative;
 					margin-right: 10px;
@@ -133,9 +147,6 @@ $primary-background-color: #ecf5ff;
 			}
 
 			.wg-switch {
-				line-height: 40px;
-				display: flex;
-				align-items: center;
 
 				.label {
 					display: flex;
@@ -175,22 +186,22 @@ $primary-background-color: #ecf5ff;
 					left: 100%;
 					margin-left: -17px;
 				}
-      }
-      .wg-button {
-        width: 90%;
-        margin: 15px 5%;
-        background: $primary-color;
-        color: #fff;
-        height: 46px;
-        line-height: 46px;
-        font-size: 18px;
-        outline: none;
-        border: none;
-        letter-spacing: 2px;
-        border-radius: 20px;
-        text-align: center;
-        box-shadow: 0 5px 10px 3px #90c7ff;
-    }
+			}
+			.wg-button {
+				width: 90%;
+				margin: 15px 5%;
+				background: $primary-color;
+				color: #fff;
+				height: 46px;
+				line-height: 46px;
+				font-size: 18px;
+				outline: none;
+				border: none;
+				letter-spacing: 2px;
+				border-radius: 20px;
+				text-align: center;
+				box-shadow: 0 5px 10px 3px #90c7ff;
+			}
 		}
 	}
 }
