--- a/src/assets/css/widget.scss
+++ b/src/assets/css/widget.scss
@@ -14,7 +14,6 @@ $primary-background-color: #ecf5ff;
 		padding-bottom: 150px;
 		margin: 20px;
 
-
 		.ghost {
 			background: #fff;
 			border: 1px dashed $primary-color;
@@ -43,165 +42,186 @@ $primary-background-color: #ecf5ff;
 				z-index: 10;
 			}
 		}
+	}
 
-		.widget-action-delete {
+	.widget-action-delete {
+		position: absolute;
+		right: 10px;
+		bottom: -20px;
+		z-index: 1009;
+	}
+
+	.widget-action-clone {
+		position: absolute;
+		right: 70px;
+		bottom: -20px;
+		z-index: 1009;
+	}
+
+	.widget-view.widget-view-imgshow {
+		padding: 0;
+		background: #f1f1f1;
+		border-bottom: none;
+	}
+
+	.widget-view.widget-view-button {
+		border-bottom: none;
+	}
+
+	.widget-view {
+		margin: 0;
+		padding: 10px;
+		background: #fff;
+		position: relative;
+		border-bottom: 1px solid #eee;
+
+		&:after {
+			content: "";
 			position: absolute;
-			right: 10px;
-			bottom: -20px;
-			z-index: 1009;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			top: 0;
+			display: block;
+			z-index: 1001;
 		}
 
-		.widget-action-clone {
-			position: absolute;
-			right: 70px;
-			bottom: -20px;
-			z-index: 1009;
+		&::-webkit-input-placeholder {
+			color: #999;
+			opacity: 1;
 		}
 
-		.widget-view.widget-view-imgshow {
-			padding: 0;
-      background: #f1f1f1;
-      border-bottom:none;
-    }
-    
-    .widget-view.widget-view-button {
-      border-bottom:none;
+
+		&:hover {
+			background: $primary-background-color;
 		}
 
-		.widget-view {
-			margin: 0;
-			padding: 10px;
+		&.active {
+			background: $primary-background-color;
+			// box-shadow: 0px 1px 10px 1px #90c7ff;
+			z-index: 1111;
+		}
+
+		.wg-item {
+			display: flex;
+			line-height: 50px;
+		}
+
+		.wg-phone {
+			.getVerCode-btn {
+				border: 0;
+				outline: 0;
+				background: $primary-color;
+				font-size: 14px;
+				color: #fff;
+				border-radius: 5px;
+				height: 40px;
+				min-width: 100px;
+				margin-top: 5px;
+				margin-left: 10px;
+				cursor: pointer;
+			}
+		}
+		.wg-staticText {
+			.text {
+				font-size: 14px;
+				color: #333;
+				line-height: 24px;
+			}
+		}
+
+		.wg-input, .wg-select {
+			width: 100%;
+			height: 40px;
+			margin: 5px 0;
+			color: #666;
+			font-size: 14px;
+			border-radius: 4px;
+			border: 1px solid #ddd;
+			outline: none;
+			text-indent: 10px;
 			background: #fff;
-      position: relative;
-      border-bottom: 1px solid #eee;
+			transition: .3s;
+		}
+		.wg-title {
+			font-size: 14px;
+			margin-right: 10px;
+			color: #333;
+		}
+		.wg-checkbox {
 
-			&:after {
+			.label {
+				float: left;
+				cursor: pointer;
+				position: relative;
+				margin-right: 10px;
+			}
+			.label>span {
+				background: #fff;
+				padding: 8px 15px;
+				border-radius: 10px;
+				border: 1px solid #ddd;
+			}
+			.wg-checkbox-input:checked + span {
+				background-color: $primary-color;
+				border-color: $primary-color;
+				color: #fff;
+			}
+		}
+
+		.wg-switch {
+			.label {
+				display: flex;
+				cursor: pointer;
+			}
+			.wg-switch-core {
+				display: inline-block;
+				position: relative;
+				margin: 0;
+				width: 40px;
+				height: 20px;
+				border: 1px solid #dcdfe6;
+				outline: 0;
+				border-radius: 10px;
+				box-sizing: border-box;
+				background: #dcdfe6;
+				transition: border-color .3s, background-color .3s;
+			}
+			.wg-switch-core:after {
 				content: "";
 				position: absolute;
-				left: 0;
-				right: 0;
-				bottom: 0;
-				top: 0;
-				display: block;
-				z-index: 1001;
+				top: 1px;
+				left: 1px;
+				border-radius: 100%;
+				transition: all .3s;
+				width: 16px;
+				height: 16px;
+				background-color: #fff;
 			}
-
-			&::-webkit-input-placeholder {
-				color: #999;
-				opacity: 1;
-			}
-
-
-			&:hover {
-				background: $primary-background-color;
-			}
-
-			&.active {
-				background: $primary-background-color;
-				// box-shadow: 0px 1px 10px 1px #90c7ff;
-				z-index: 1111;
-			}
-
-			.wg-item {
-        display: flex;
-				line-height: 50px;
-			}
-
-			.wg-input, .wg-select {
-				width: 100%;
-				height: 40px;
-				margin: 5px 0;
-				color: #666;
-				font-size: 14px;
-				border-radius: 4px;
-				border: 1px solid #ddd;
-				outline: none;
-				text-indent: 10px;
-				background: #fff;
-				transition: .3s;
-			}
-			.wg-title {
-				font-size: 14px;
-				margin-right: 10px;
-				color: #333;
-			}
-			.wg-checkbox {
-
-				.label {
-          float: left;
-					cursor: pointer;
-					position: relative;
-					margin-right: 10px;
-				}
-				.label span {
-					background: #fff;
-					padding: 10px;
-					border-radius: 10px;
-					border: 1px solid #ddd;
-				}
-				.wg-checkbox-input:checked + span {
-					background-color: $primary-color;
-					border-color: $primary-color;
-					color: #fff;
-				}
-			}
-
-			.wg-switch {
-
-				.label {
-					display: flex;
-					cursor: pointer;
-				}
-
-				.wg-switch-core {
-					display: inline-block;
-					position: relative;
-					margin: 0;
-					width: 40px;
-					height: 20px;
-					border: 1px solid #dcdfe6;
-					outline: 0;
-					border-radius: 10px;
-					box-sizing: border-box;
-					background: #dcdfe6;
-					transition: border-color .3s, background-color .3s;
-				}
-				.wg-switch-core:after {
-					content: "";
-					position: absolute;
-					top: 1px;
-					left: 1px;
-					border-radius: 100%;
-					transition: all .3s;
-					width: 16px;
-					height: 16px;
-					background-color: #fff;
-				}
-				.wg-switch-input:checked + span {
-					background-color: $primary-color;
-					border-color: $primary-color;
-					color: #fff;
-				}
-				.wg-switch-input:checked + span::after {
-					left: 100%;
-					margin-left: -17px;
-				}
-			}
-			.wg-button {
-				width: 90%;
-				margin: 15px 5%;
-				background: $primary-color;
+			.wg-switch-input:checked + span {
+				background-color: $primary-color;
+				border-color: $primary-color;
 				color: #fff;
-				height: 46px;
-				line-height: 46px;
-				font-size: 18px;
-				outline: none;
-				border: none;
-				letter-spacing: 2px;
-				border-radius: 20px;
-				text-align: center;
-				box-shadow: 0 5px 10px 3px #90c7ff;
 			}
+			.wg-switch-input:checked + span::after {
+				left: 100%;
+				margin-left: -17px;
+			}
+		}
+		.wg-button {
+			width: 90%;
+			margin: 15px 5%;
+			background: $primary-color;
+			color: #fff;
+			height: 46px;
+			line-height: 46px;
+			font-size: 18px;
+			outline: none;
+			border: none;
+			letter-spacing: 2px;
+			border-radius: 20px;
+			text-align: center;
+			box-shadow: 0 3px 10px 1px #90c7ff;
 		}
 	}
 }
