--- a/src/assets/css/widget.scss
+++ b/src/assets/css/widget.scss
@@ -75,7 +75,7 @@ $primary-background-color: #d8e8fa;
 
 	.widget-view {
 		margin: 0;
-		padding: 10px;
+		padding: 5px 10px;
 		// background: #fff;
 		position: relative;
 
