--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -239,6 +239,10 @@ $primary-background-color = #d8e8fa;
     }
 
     .wg-horizontal-picker {
+      width: 400px;
+      border: 1px solid #999;
+      border-radius: 10px;
+      overflow: hidden;
       white-space: nowrap;
       height: 36px;
       line-height: 36px;
@@ -249,7 +253,7 @@ $primary-background-color = #d8e8fa;
         height: 100%;
         text-align: center;
         display: inline-block;
-        padding: 0;
+        padding: 0 20px;
         white-space: nowrap;
         position: relative;
         overflow: hidden;
