添加分割线组件

--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -284,5 +284,10 @@ $primary-background-color = #d8e8fa;
         background-color: #d3dce6;
       }
     }
+
+    .wg-splitLine .splitLine-hr{
+      border: 0 none;
+      border-top: 1px solid #d3d3d3;
+    }
   }
 }
