--- a/src/assets/css/themes.styl
+++ b/src/assets/css/themes.styl
@@ -22,3 +22,12 @@ $t3-base-color = #6e7786;
   margin: 0 auto 20px auto;
   padding: 10px 0;
 }
+
+.theme4 {
+  position: relative;
+  width: 92%;
+  background-color: #fff;
+  margin: -50px auto 20px auto;
+  padding: 10px 0;
+  box-shadow: 5px 5px 10px 0 rgba(116, 116, 116, 0.6), -5px 5px 10px 0 rgba(116, 116, 116, 0.6);
+}
