--- a/src/assets/css/themes.styl
+++ b/src/assets/css/themes.styl
@@ -3,31 +3,26 @@ $t2-base-color = #fe7c01;
 $t3-base-color = #6e7786;
 
 .theme1 {
-  width: 92%;
-  background-color: #fff;
+  width: 90%;
+  background: #fff;
   margin: 0 auto 20px auto;
   padding: 10px 0;
+  overflow: hidden;
 }
 
 .theme2 {
-  width: 92%;
-  background-color: #fff;
+  width: 90%;
+  background: #fff;
   margin: 0 auto 20px auto;
   padding: 10px 0;
+  overflow: hidden;
 }
 
 .theme3 {
-  width: 92%;
-  background-color: #fff;
-  margin: 0 auto 20px auto;
-  padding: 10px 0;
-}
-
-.theme4 {
   position: relative;
   width: 92%;
   background-color: #fff;
-  margin: -50px auto 20px auto;
+  margin: 0 auto 20px auto;
   padding: 10px 0;
   box-shadow: 5px 5px 10px 0 rgba(116, 116, 116, 0.6), -5px 5px 10px 0 rgba(116, 116, 116, 0.6);
 }
