新增页面背景图配置

--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -12,7 +12,10 @@ $primary-background-color = #d8e8fa;
     min-height: calc(100% - 40px);
     box-shadow: 0 2px 5px 1px rgba(124, 124, 124, 0.2);
     margin: 20px;
-    background: #fff;
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: 100% 100%;
 
     img {
       vertical-align: top;
@@ -285,7 +288,7 @@ $primary-background-color = #d8e8fa;
       }
     }
 
-    .wg-splitLine .splitLine-hr{
+    .wg-splitLine .splitLine-hr {
       border: 0 none;
       border-top: 1px solid #d3d3d3;
     }
