文本描述新增背景图片

--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -129,6 +129,9 @@ $primary-background-color = #d8e8fa;
 
     .wg-staticText {
       line-height: 1.6;
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      background-position: 0 0;
     }
 
     .wg-input, .wg-select {
