--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -30,6 +30,7 @@ $primary-background-color = #d8e8fa;
 
   .widget-form-list {
     min-height: 360px;
+    padding: 1px;
 
     .ghost {
       background: #fff;
@@ -73,6 +74,50 @@ $primary-background-color = #d8e8fa;
     right: 70px;
     bottom: -20px;
     z-index: 1009;
+  }
+
+  .widget-view.no-padding {
+    padding: 0;
+
+    .img-placeholder {
+      background: #f1f1f1;
+    }
+  }
+
+  .widget-child-form-list {
+    position: relative;
+    transition: 0.2s;
+    padding: 10px;
+
+    .el-icon-rank {
+      display: none;
+      position: absolute;
+      left: -28px;
+      top: 15px;
+      font-size: 24px;
+      padding: 2px;
+      background-color: #409eff;
+      color: #fff;
+      z-index: 1001;
+      cursor: move;
+    }
+
+    &:hover {
+      box-shadow: 0px 1px 10px 1px #90c7ff inset;
+
+      .el-icon-rank {
+        display: block;
+      }
+    }
+
+    &.active {
+      box-shadow: 0px 1px 10px 1px #90c7ff;
+      z-index: 1111;
+
+      .el-icon-rank {
+        display: block;
+      }
+    }
   }
 
   .widget-view {
