--- a/src/assets/css/themes.styl
+++ b/src/assets/css/themes.styl
@@ -53,7 +53,7 @@
     .wg-input, .wg-select {
       border-radius: 10px;
       padding: 0 10px;
-      border: 1px solid #4936d0;
+      border: 1px solid #a92200;
     }
   }
 }
