--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -159,16 +159,14 @@ $primary-background-color = #d8e8fa;
 
     .wg-phone {
       .getVerCode-btn {
-        border: 0;
         outline: 0;
-        font-size: 14px;
-        color: #fff;
-        border-radius: 5px;
-        height: 40px;
+        font-size: 12px;
+        height: 36px;
         min-width: 100px;
         margin-top: 5px;
         margin-left: 10px;
         cursor: pointer;
+        border: 1px solid transparent;
       }
     }
 
