--- a/src/assets/css/config.styl
+++ b/src/assets/css/config.styl
@@ -105,4 +105,10 @@
       padding-bottom: 10px;
     }
   }
+
+  .ql-snow .ql-color-picker .ql-picker-label svg, .ql-snow .ql-icon-picker .ql-picker-label svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
