--- a/src/assets/css/config.styl
+++ b/src/assets/css/config.styl
@@ -105,10 +105,24 @@
       padding-bottom: 10px;
     }
   }
+}
+
+.quill-editor {
+  position: relative;
+
+  .ql-toolbar.ql-snow .ql-picker-label {
+    outline: 0;
+  }
 
   .ql-snow .ql-color-picker .ql-picker-label svg, .ql-snow .ql-icon-picker .ql-picker-label svg {
     position: absolute;
     top: 0;
     left: 0;
+  }
+
+  .ql-container {
+    min-height: 80px;
+    max-height: 400px;
+    overflow-y: auto;
   }
 }
