--- a/src/assets/css/config.styl
+++ b/src/assets/css/config.styl
@@ -110,6 +110,57 @@
 .quill-editor {
   position: relative;
 
+  .ql-toolbar {
+    &>button, &>span {
+      position: relative;
+      padding: 0;
+      margin: 4px 7px;
+      height: 20px;
+      width: 20px;
+    }
+  }
+
+  .el-color-picker__trigger {
+    border: none;
+  }
+
+  .el-color-picker__color {
+    display: none;
+  }
+
+  .el-color-picker.el-color-picker--mini::before {
+    content: 'A';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: #333;
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+  }
+
+  .ql-fontsize>.ql-picker-label {
+    position: absolute;
+    &::before {
+      content: 'T';
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      color: #333;
+      width: 100%;
+      height: 100%;
+      font-size: 20px;
+    }
+
+    &>svg {
+      display: none;
+    }
+  }
+
   .ql-toolbar.ql-snow .ql-picker-label {
     outline: 0;
   }
@@ -124,5 +175,17 @@
     min-height: 80px;
     max-height: 400px;
     overflow-y: auto;
+  }
+
+  .ql-align .ql-picker-label {
+    top: -5px;
+  }
+
+  // .ql-snow .ql-picker-options .ql-picker-item {
+  //   padding: 0px;
+  // }
+
+  .ql-fontfamily .ql-picker-item:before, .ql-fontsize .ql-picker-item:before, .ql-letterspace .ql-picker-item:before, .ql-lineheight .ql-picker-item:before {
+    content: attr(data-value);
   }
 }
