--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -27,11 +27,12 @@ $primary-background-color = #d8e8fa;
       background-image: url('../assets/img/form_empty.png');
       background-repeat: no-repeat;
       background-position: 50%;
+      background-size: 66%;
     }
   }
 
   .widget-form-list {
-    min-height: 230px;
+    min-height: 360px;
 
     .ghost {
       background: #fff;
