--- a/src/assets/css/config.styl
+++ b/src/assets/css/config.styl
@@ -120,6 +120,10 @@
     }
   }
 
+  .ql-picker.ql-size {
+    width: 20px;
+  }
+
   .el-color-picker__trigger {
     border: none;
   }
@@ -141,10 +145,10 @@
     font-size: 20px;
   }
 
-  .ql-fontsize>.ql-picker-label {
+  .ql-picker.ql-size>.ql-picker-label, .ql-picker.ql-indent>.ql-picker-label {
     position: absolute;
+
     &::before {
-      content: 'T';
       position: absolute;
       top: 0;
       bottom: 0;
@@ -161,6 +165,14 @@
     }
   }
 
+  .ql-picker.ql-size>.ql-picker-label::before {
+    content: 'T';
+  }
+
+  .ql-picker.ql-indent>.ql-picker-label::before {
+    content: 'L';
+  }
+
   .ql-toolbar.ql-snow .ql-picker-label {
     outline: 0;
   }
@@ -172,7 +184,7 @@
   }
 
   .ql-container {
-    min-height: 80px;
+    min-height: 120px;
     max-height: 400px;
     overflow-y: auto;
   }
@@ -181,11 +193,12 @@
     top: -5px;
   }
 
-  // .ql-snow .ql-picker-options .ql-picker-item {
-  //   padding: 0px;
-  // }
-
-  .ql-fontfamily .ql-picker-item:before, .ql-fontsize .ql-picker-item:before, .ql-letterspace .ql-picker-item:before, .ql-lineheight .ql-picker-item:before {
+  .ql-picker.ql-size .ql-picker-item:before, .ql-picker.ql-indent .ql-picker-item:before {
     content: attr(data-value);
+  }
+
+  .ql-snow .ql-picker-options .ql-picker-item {
+    line-height: 1.8;
+    padding: 0;
   }
 }
