--- a/src/assets/css/config.styl
+++ b/src/assets/css/config.styl
@@ -170,7 +170,7 @@
   }
 
   .ql-picker.ql-indent>.ql-picker-label::before {
-    content: 'L';
+    content: 'I';
   }
 
   .ql-toolbar.ql-snow .ql-picker-label {
