--- a/src/assets/css/config.styl
+++ b/src/assets/css/config.styl
@@ -145,7 +145,7 @@
     font-size: 20px;
   }
 
-  .ql-picker.ql-size>.ql-picker-label, .ql-picker.ql-indent>.ql-picker-label {
+  .ql-picker.ql-size>.ql-picker-label, .ql-picker.ql-textIndent>.ql-picker-label {
     position: absolute;
 
     &::before {
@@ -169,7 +169,7 @@
     content: 'T';
   }
 
-  .ql-picker.ql-indent>.ql-picker-label::before {
+  .ql-picker.ql-textIndent>.ql-picker-label::before {
     content: 'I';
   }
 
@@ -193,7 +193,7 @@
     top: -5px;
   }
 
-  .ql-picker.ql-size .ql-picker-item:before, .ql-picker.ql-indent .ql-picker-item:before {
+  .ql-picker.ql-size .ql-picker-item:before, .ql-picker.ql-textIndent .ql-picker-item:before {
     content: attr(data-value);
   }
 
