--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -33,6 +33,7 @@ $primary-background-color = #d8e8fa;
 
   .widget-form-list {
     min-height: 360px;
+    padding-bottom: 30px;
 
     .ghost {
       background: #fff;
@@ -68,14 +69,14 @@ $primary-background-color = #d8e8fa;
     position: absolute;
     right: 10px;
     bottom: -20px;
-    z-index: 1009;
+    z-index: 1199;
   }
 
   .widget-action-clone {
     position: absolute;
     right: 70px;
     bottom: -20px;
-    z-index: 1009;
+    z-index: 1199;
   }
 
   .widget-view.no-padding {
