--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -12,8 +12,8 @@ $primary-background-color = #d8e8fa;
     width: 375px;
     min-height: 640px;
     margin: 20px auto;
-    -webkit-box-shadow: 0 2px 5px 1px hsla(0,0%,48.6%,.2);
-    box-shadow: 0 2px 5px 1px hsla(0,0%,48.6%,.2);
+    -webkit-box-shadow: 0 2px 5px 1px hsla(0, 0%, 48.6%, 0.2);
+    box-shadow: 0 2px 5px 1px hsla(0, 0%, 48.6%, 0.2);
     background-color: #fff;
     background-repeat: no-repeat;
     background-position: 0 0;
@@ -65,18 +65,20 @@ $primary-background-color = #d8e8fa;
     }
   }
 
-  .widget-action-delete {
+  .widget-action-btn {
     position: absolute;
-    right: 10px;
-    bottom: -20px;
+    bottom: -17px;
     z-index: 1199;
+    padding: 10px;
+    font-size: 12px;
+  }
+
+  .widget-action-delete {
+    right: 8px;
   }
 
   .widget-action-clone {
-    position: absolute;
-    right: 70px;
-    bottom: -20px;
-    z-index: 1199;
+    right: 60px;
   }
 
   .widget-view.no-padding {
@@ -270,9 +272,8 @@ $primary-background-color = #d8e8fa;
     }
 
     .wg-button {
-      width: 90%;
-      margin: 15px 5%;
-      // background: $primary-color;
+      width: 100%;
+      padding: 0;
       color: #fff;
       height: 46px;
       line-height: 46px;
@@ -282,7 +283,6 @@ $primary-background-color = #d8e8fa;
       letter-spacing: 2px;
       border-radius: 20px;
       text-align: center;
-      // box-shadow: 0 3px 10px 1px #90c7ff;
     }
 
     .wg-horizontal-picker {
