--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -81,14 +81,6 @@ $primary-background-color = #d8e8fa;
     right: 60px;
   }
 
-  .widget-view.no-padding {
-    padding: 0;
-
-    .img-placeholder {
-      background: #f1f1f1;
-    }
-  }
-
   .widget-child-form-list {
     position: relative;
     transition: 0.2s;
@@ -127,11 +119,9 @@ $primary-background-color = #d8e8fa;
 
   .widget-view {
     margin: 0;
-    padding: 5px 10px;
-    // background: #fff;
+    padding: 0px;
     position: relative;
 
-    // border: 2px solid transparent
     &:after {
       content: '';
       position: absolute;
@@ -150,14 +140,15 @@ $primary-background-color = #d8e8fa;
 
     &:hover {
       box-shadow: 0px 1px 10px 1px #90c7ff inset;
-      // background: #ecf5ff;
-      // border: 2px dotted #90c7ff
     }
 
     &.active {
-      // background: $primary-background-color;
       box-shadow: 0px 1px 10px 1px #90c7ff;
       z-index: 1111;
+    }
+
+    .wg-padding {
+      padding: 5px 10px;
     }
 
     .wg-item {
@@ -310,15 +301,12 @@ $primary-background-color = #d8e8fa;
     }
 
     .wg-imgshow {
-      margin: -5px -10px;
-
       .img-placeholder {
         background: #f1f1f1;
       }
     }
 
     .wg-imgslide {
-      margin: -5px -10px;
       text-align: center;
 
       .el-carousel__container {
