--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -330,15 +330,16 @@ $primary-background-color = #d8e8fa;
     right: 0;
 
     .widget-form-list {
-      min-height: 30px;
+      min-height: 36px;
     }
 
     .el-icon-rank {
       top: 0px;
+      cursor: no-drop;
     }
 
     .widget-list-wrapper {
-      height: 30px;
+      height: 36px;
       overflow: hidden;
     }
 
