--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -330,7 +330,7 @@ $primary-background-color = #d8e8fa;
     right: 0;
 
     .widget-form-list {
-      min-height: 36px;
+      min-height: 40px;
     }
 
     .el-icon-rank {
@@ -339,7 +339,8 @@ $primary-background-color = #d8e8fa;
     }
 
     .widget-list-wrapper {
-      height: 36px;
+      height: 40px;
+      transition: 0.3s;
       overflow: hidden;
     }
 
