--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -321,6 +321,21 @@ $primary-background-color = #d8e8fa;
     }
   }
 
+  .wg-wechat {
+    .wechat-avatar {
+      width: 32px;
+      height: 32px;
+      margin-right: 10px;
+      border-radius: 50%;
+      overflow: hidden;
+    }
+
+    .wechat-btn {
+      text-align: center;
+      padding: 8px 15px;
+    }
+  }
+
   .wg-formlist {
     position: relative;
     transition: 0.2s;
