--- a/src/assets/css/config.styl
+++ b/src/assets/css/config.styl
@@ -27,6 +27,28 @@
     right: 0;
   }
 
+  .wg-col-config {
+    .col-itemlist {
+      position: relative;
+      padding: 20px 10px 10px;
+      margin-top: 10px;
+      border: 1px dotted #ccc;
+      background-color: #f9f9f9;
+    }
+
+    .move-icon {
+      position: absolute;
+      top: 0px;
+      left: -10px;
+    }
+
+    .delect-icon {
+      position: absolute;
+      top: 0px;
+      right: 0px;
+    }
+  }
+
   .move-icon {
     font-size: 20px;
     color: #999;
