--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -98,3 +98,24 @@ $primary-background-color = #ecf5ff;
     }
   }
 }
+
+// 动画类
+@keyframes marquee-up {
+  0% {
+    transform: translateY(0);
+  }
+
+  100% {
+    transform: translateY(-50%);
+  }
+}
+
+@keyframes marquee-left {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-50%);
+  }
+}
