--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -349,4 +349,25 @@ $primary-background-color = #d8e8fa;
     right: 0;
     z-index: 1111;
   }
+
+  .wg-marquee {
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
+  }
+
+  .wg-marquee-up {
+    -webkit-animation: marquee-up 5s linear infinite;
+    -ms-animation: marquee-up 5s linear infinite;
+    -o-animation: marquee-up 5s linear infinite;
+    animation: marquee-up 5s linear infinite;
+  }
+
+  .wg-marquee-left {
+    display: inline-flex !important;
+    -webkit-animation: marquee-left 5s linear infinite;
+    -ms-animation: marquee-left 5s linear infinite;
+    -o-animation: marquee-left 5s linear infinite;
+    animation: marquee-left 5s linear infinite;
+  }
 }
