--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -8,9 +8,17 @@ $primary-background-color = #ecf5ff;
 }
 
 // 覆盖element-ui样式 end
+
+// 全局通用样式
 :not(.form-edit-wrapper)::-webkit-scrollbar {
   display: none;
 }
+
+.minwidth300 {
+  min-width: 300px;
+}
+
+// 全局通用样式 end
 
 .home {
   height: calc(100% - 70px);
