--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -1,4 +1,5 @@
-$primary-color = #409EFF;
+$primary-color = rgb(64, 158, 255);
+$primary-color-alpha = rgba(64, 158, 255, 0.6);
 $primary-background-color = #ecf5ff;
 
 // 覆盖element-ui样式
@@ -15,7 +16,6 @@ $primary-background-color = #ecf5ff;
 }
 
 // 全局通用样式 end
-
 .home {
   height: calc(100% - 70px);
   user-select: none;
@@ -49,20 +49,20 @@ $primary-background-color = #ecf5ff;
 }
 
 .components-list {
-  padding: 8px 0;
+  padding: 0 0 0 8px;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+
+  .el-button {
+    border: none;
+    font-size: 14px;
+    margin: 5px 0 0 0;
+  }
 
   .widget-cate {
     padding: 8px 12px;
     font-size: 13px;
-  }
-
-  ul {
-    position: relative;
-    overflow: hidden;
-    padding: 0 10px 10px;
-    margin: 0;
   }
 
   .ghost {
@@ -74,31 +74,57 @@ $primary-background-color = #ecf5ff;
     }
   }
 
+  .components-title {
+    padding: 8px;
+    box-shadow: 3px 0 3px 0px rgba(0, 0, 0, 0.08);
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
+  .components-content {
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto;
+
+    .widget-title {
+      font-size: 16px;
+      margin-bottom: 15px;
+      margin-top: 30px;
+    }
+
+    & li:first-child .widget-title {
+      margin-top: 0;
+    }
+  }
+
   .form-edit-widget-label {
+    width: 100%;
     font-size: 12px;
-    display: block;
-    width: 48%;
     line-height: 30px;
-    position: relative;
-    float: left;
-    left: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    margin: 1%;
     color: #333;
-    border: 1px solid #F4F6FC;
+    border: 1px solid #fff;
     text-align: center;
+    box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.2);
+    user-select: none;
+    cursor: move;
+    border-radius: 4px;
+    margin: 20px 0;
+    transition: all 0.2s;
+
+    img {
+      vertical-align: middle;
+    }
 
     &:hover {
       color: $primary-color;
-      border: 1px dashed $primary-color;
+      box-shadow: 0 0 6px 3px $primary-color-alpha;
     }
 
-    & > a {
-      display: block;
-      cursor: move;
-      background: #F4F6FC;
+    &.disdraggable {
+      cursor: no-drop;
     }
   }
 }
