--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -7,6 +7,7 @@ $primary-background-color = #d8e8fa;
   left: 0;
   right: 0;
   bottom: 0;
+  overflow: auto
 
   .widget-form-container {
     position: relative;
