--- a/src/assets/css/widget.styl
+++ b/src/assets/css/widget.styl
@@ -368,6 +368,14 @@ $primary-background-color = #d8e8fa;
     padding: 10px;
   }
 
+  .wg-fixed-top {
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1111;
+  }
+
   .wg-fixed-bottom {
     position: sticky;
     bottom: 0;
