--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -130,6 +130,10 @@ $primary-background-color = #ecf5ff;
 }
 
 // 动画类
+.transition03 {
+  transition: 0.3s;
+}
+
 @keyframes marquee-up {
   0% {
     transform: translateY(0);
